--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,8 +28,8 @@
             android:padding="24dp">
 
             <TextView
-                android:id="@+id/textView"
-                android:text="Se connecter"
+                android:id="@+id/tv"
+                android:text="S'inscrire"
                 style="@style/st_titre1"
                 android:textSize="24sp"
                 android:layout_marginBottom="24dp"
@@ -41,7 +41,7 @@
                 />
 
             <EditText
-                android:id="@+id/ednom_auth"
+                android:id="@+id/ednom_reg"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:textColor="@color/black"
@@ -55,7 +55,7 @@
                 android:textColorHighlight="@color/cardview_dark_background" />
 
             <EditText
-                android:id="@+id/edmdp_auth"
+                android:id="@+id/edmdp_reg"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:textColor="@color/black"
@@ -72,30 +72,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="start">
-
-                <CheckBox
-                    android:id="@+id/stay_connected"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Resté connecté"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:scaleX="0.8"
-                    android:scaleY="0.8"
-                    android:buttonTint="@color/black" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnqte_auth"
+                    android:id="@+id/btnqte_reg"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -103,19 +84,21 @@
                     android:textColor="@android:color/white"
                     android:padding="10dp"
                     android:textSize="18sp"
+                    android:layout_marginTop="30dp"
                     android:backgroundTint="@color/black"
                     app:cornerRadius = "20dp"/>
 
                 <Button
-                    android:id="@+id/btnval_auth"
+                    android:id="@+id/btnval_reg"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Valider"
+                    android:text="Créer"
                     android:textColor="@android:color/white"
                     android:layout_marginStart="16dp"
                     android:padding="10dp"
                     android:textSize="18sp"
+                    android:layout_marginTop="30dp"
                     android:backgroundTint="@color/black"
                     app:cornerRadius = "20dp"/>
             </LinearLayout>
@@ -131,7 +114,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Vous n'avez pas de compte ? "
+            android:text="Avez vous déjà un compte ? "
             android:textSize="14sp"
             android:textAlignment="center"
             android:id="@+id/signupText"
@@ -141,13 +124,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Inscrivez-vous"
+            android:text="Se connecter"
             android:textSize="13sp"
             android:textAlignment="center"
-            android:id="@+id/signupLink"
+            android:id="@+id/signinLink"
             android:textColor="@color/orange"
             android:layout_marginBottom="20dp"
             android:textStyle=""/>
     </LinearLayout>
-
 </LinearLayout>
