--- a/app/src/main/res/layout/activity_accueil.xml
+++ b/app/src/main/res/layout/activity_accueil.xml
@@ -5,50 +5,73 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:background="@drawable/bg"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="@drawable/bg"
     tools:context=".Accueil">
 
-    <!-- Titre "Accueil" -->
-    <TextView
-        android:id="@+id/tvuser_acc"
+    <!-- Contenu de la page -->
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accueil"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:paddingBottom="50dp"
-        android:textAlignment="center"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical"> <!-- Cette ligne permet de pousser le contenu vers le haut -->
 
-    <!-- Bouton Ajout -->
-    <Button
-        android:id="@+id/btnajout_acc"
-        android:layout_width="250dp"
+        <TextView
+            android:id="@+id/tvuser_acc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingBottom="50dp"
+            android:text="Accueil"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btnajout_acc"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="@color/orange"
+            android:elevation="4dp"
+            android:padding="15dp"
+            android:text="Ajouter un contact"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnaffiche_acc"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:backgroundTint="@color/orange"
+            android:elevation="4dp"
+            android:padding="15dp"
+            android:text="Afficher les contacts"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+    <!-- Se déconnecter en bas -->
+    <TextView
+        android:id="@+id/tvdeconnecte_acc"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ajouter un contact"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/orange"
-        android:elevation="4dp"
-        android:padding="15dp"
-        android:layout_gravity="center_horizontal" />
-
-    <!-- Bouton Affichage -->
-    <Button
-        android:id="@+id/btnaffiche_acc"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:text="Afficher les contacts"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:backgroundTint="@color/orange"
-        android:elevation="4dp"
-        android:padding="15dp"
-        android:layout_gravity="center_horizontal" />
-
+        android:layout_gravity="bottom|right|center_horizontal"
+        android:clickable="true"
+        android:drawableLeft="@drawable/baseline_logout_24"
+        android:drawablePadding="8dp"
+        android:focusable="true"
+        android:gravity="right"
+        android:paddingRight="16dp"
+        android:paddingBottom="16dp"
+        android:text="Se déconnecter"
+        android:textColor="#464545"
+        android:textSize="16sp" />
 </LinearLayout>
