--- a/app/src/main/res/layout/activity_affiche.xml
+++ b/app/src/main/res/layout/activity_affiche.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/white"
+    android:fitsSystemWindows="true"
     tools:context=".Affiche">
 
     <!-- Barre de titre avec flèche de retour -->
@@ -50,13 +51,14 @@
         android:iconifiedByDefault="false"
         android:queryHint="Rechercher un contact" />
 
-    <ListView
-        android:id="@+id/lv"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp"
         android:layout_marginTop="20dp"
         android:padding="10dp"
-        android:background="@color/white"/>
+        android:background="@color/white">
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
