--- a/app/src/main/res/layout/activity_ajout.xml
+++ b/app/src/main/res/layout/activity_ajout.xml
@@ -8,6 +8,7 @@
     android:padding="20dp"
     android:orientation="vertical"
     android:gravity="center"
+    android:fitsSystemWindows="true"
     tools:context=".Ajout">
 
     <ImageView
