--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     android:padding="16dp"
     android:background="@drawable/login"
     android:gravity="center"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
@@ -58,16 +59,16 @@
                 android:id="@+id/edmdp_auth"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:textColor="@color/black"
-                android:hint="saisir votre mot de passe"
-                android:textSize="20sp"
-                android:padding="8dp"
                 android:layout_marginTop="20dp"
-                android:inputType="textPassword"
                 android:background="@drawable/custom_edittext"
                 android:drawableLeft="@drawable/baseline_lock_24"
                 android:drawablePadding="8dp"
-                android:textColorHighlight="@color/cardview_dark_background" />
+                android:hint="saisir mot de passe"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHighlight="@color/cardview_dark_background"
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
