--- a/app/src/main/res/layout/activity_affiche.xml
+++ b/app/src/main/res/layout/activity_affiche.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#F8E4D1"
+        android:background="#FBD593"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="9dp"
@@ -54,11 +54,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
         android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"
-        android:layout_marginTop="20dp"
-        android:padding="10dp"
-        android:background="@color/white">
-    </androidx.recyclerview.widget.RecyclerView>
+        android:dividerHeight="1dp"/>
 </LinearLayout>
