--- a/app/src/main/res/layout/activity_ajout.xml
+++ b/app/src/main/res/layout/activity_ajout.xml
@@ -79,24 +79,26 @@
             android:id="@+id/btnretour"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:text="Annuler"
-            android:textColor="@android:color/white"
             android:backgroundTint="@color/black"
             android:padding="12dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="5dp"/>
+            android:text="Annuler"
+            android:textColor="@android:color/white"
+            app:cornerRadius="5dp" />
 
         <Button
             android:id="@+id/btnsave"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            android:text="Enregistrer"
-            android:textColor="@android:color/white"
             android:backgroundTint="@color/black"
             android:padding="12dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"/>
+            android:text="Enregistrer"
+            android:textColor="@android:color/white"
+            app:cornerRadius="5dp" />
     </LinearLayout>
 </LinearLayout>
