--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/custom_edittext"
+    android:fitsSystemWindows="true"
+    android:background="@drawable/login"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".SplashScreen">
 
     <ImageView
+        android:id="@+id/logo"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginBottom="20dp"
+        android:radius="55dp"
         android:src="@drawable/logo" />
 
     <TextView
@@ -21,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textColor="#424242"
         android:text="MyContacts"
         android:textSize="50sp" />
-
 </LinearLayout>
