--- a/app/src/main/res/layout/viewdelete.xml
+++ b/app/src/main/res/layout/viewdelete.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -24,14 +25,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/black"
-            android:text="Annuler" />
+            android:text="Annuler"
+            app:cornerRadius="5dp" />
 
         <Button
             android:id="@+id/button_confirmer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Confirmer"
+            android:layout_marginStart="10dp"
             android:backgroundTint="@color/black"
-            android:layout_marginStart="10dp" />
+            android:text="Confirmer"
+            app:cornerRadius="5dp" />
     </LinearLayout>
 </LinearLayout>
