--- a/app/src/main/res/layout/viewdialogue.xml
+++ b/app/src/main/res/layout/viewdialogue.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -84,7 +85,8 @@
             android:layout_marginEnd="8dp"
             android:backgroundTint="@color/black"
             android:text="Annuler"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            app:cornerRadius="5dp" />
 
         <Button
             android:id="@+id/btn_save"
@@ -92,7 +94,8 @@
             android:layout_height="wrap_content"
             android:backgroundTint="@color/black"
             android:text="Enregistrer"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            app:cornerRadius="5dp" />
     </LinearLayout>
 
 </LinearLayout>
